<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="account_level_title">Account Action Required</string>
    <string name="activity_recognition_permission_description">Allows an app to receive periodic updates of your activity level from Google, for example, if you are walking, driving, cycling, or stationary.</string>
    <string name="activity_recognition_permission_label">activity recognition</string>
    <string name="add_a_place_add">Add</string>
    <string name="add_a_place_call_to_action">Add a place</string>
    <string name="add_a_place_call_to_drag">Drag the map to position the marker</string>
    <string name="add_a_place_cancel">Cancel</string>
    <string name="add_a_place_next">Next</string>
    <string name="agree">Agree</string>
    <string name="analytics_service_title">Google Analytics Service</string>
    <string name="app_label">Network Location</string>
    <string name="app_level_title">Sign-in Request</string>
    <string name="app_level_title_secondary">Sign-in Request by %s</string>
    <string name="auth_accept_access">Accept</string>
    <string name="auth_account_already_has_gmail">Account already has Gmail.</string>
    <string name="auth_account_setup_title">Google Account</string>
    <string name="auth_ads_settings_title">Ads</string>
    <string name="auth_allow_external_site_access">Have ongoing access to your data at %s</string>
    <string name="auth_app_label">Google Account Manager</string>
    <string name="auth_app_permission_footnote">%s and Google will use this information in accordance with their respective terms of service and privacy policies.</string>
    <string name="auth_app_permission_label">THIS APP WOULD LIKE TO</string>
    <string name="auth_app_permission_ok_footnote">By continuing, you allow this app and Google to use your information in accordance with their respective terms of service and privacy policies.</string>
    <string name="auth_app_permission_sign_in_footnote">By touching Sign in, you allow this app and Google to use your information in accordance with their respective terms of service and privacy policies.</string>
    <string name="auth_app_permission_title">Sign in to %s with Google</string>
    <string name="auth_authzen_2f_challenge_confirmation_allow_button_text">Allow login</string>
    <string name="auth_authzen_action_approved_toast_text">Action approved</string>
    <string name="auth_authzen_action_canceled_toast_text">Action canceled</string>
    <string name="auth_authzen_allow_reset_button_text">Allow password reset</string>
    <string name="auth_authzen_cancel_button_label">Cancel</string>
    <string name="auth_authzen_close_button_text">Close</string>
    <string name="auth_authzen_confirmation_allow_button_text">Allow</string>
    <string name="auth_authzen_confirmation_cancel_button_text">Cancel</string>
    <string name="auth_authzen_default_confirmation_description">Allow the sign-in to your account from %s?</string>
    <string name="auth_authzen_default_confirmation_title">We need your confirmation</string>
    <string name="auth_authzen_default_incorrect_pin_text">Incorrect number selected. Your request has been canceled.</string>
    <string name="auth_authzen_default_request_description">request details not known</string>
    <string name="auth_authzen_generic_error_text">An error occurred. Please try again.</string>
    <string name="auth_authzen_google_logo_label">Google logo</string>
    <string name="auth_authzen_login_challenge_approved_text">Sign-in approved</string>
    <string name="auth_authzen_login_challenge_canceled_text">Sign-in canceled</string>
    <string name="auth_authzen_login_challenge_confirmation_allow_button_text">Allow sign-in</string>
    <string name="auth_authzen_login_challenge_desc_text">Are you trying to sign in from %s?</string>
    <string name="auth_authzen_login_challenge_incorrect_pin_desc_text">Google stopped the sign-in attempt.</string>
    <string name="auth_authzen_login_challenge_incorrect_pin_title_text">Incorrect number</string>
    <string name="auth_authzen_login_challenge_pin_confirm_desc_text">Touch the number shown on the other screen. This will sign you in on your computer.</string>
    <string name="auth_authzen_login_challenge_reject_desc_text">Someone just tried to sign in to your Google Account using your password. Google stopped the sign-in attempt.</string>
    <string name="auth_authzen_login_challenge_reject_title_text">Sign-in prevented</string>
    <string name="auth_authzen_login_challenge_title_text">Trying to sign-in?</string>
    <string name="auth_authzen_minutemaid_challenge_desc_text">"To approve sign-in on your computer, you'll need to verify your identity"</string>
    <string name="auth_authzen_minutemaid_challenge_location_text">sign-in request from a computer in %s</string>
    <string name="auth_authzen_minutemaid_no_button_text">"I didn't request this"</string>
    <string name="auth_authzen_minutemaid_notify_desc_text">Thanks for letting us know, %s</string>
    <string name="auth_authzen_minutemaid_notify_sub_desc_text">"We've made a note of this activity, so we can continue to keep your account secure."</string>
    <string name="auth_authzen_minutemaid_pin_entry_allow_button_text">Sign in</string>
    <string name="auth_authzen_minutemaid_pin_entry_cancel_button_text">Cancel</string>
    <string name="auth_authzen_minutemaid_pin_entry_description_text">Enter your Google Account PIN</string>
    <string name="auth_authzen_minutemaid_yes_button_text">OK, continue</string>
    <string name="auth_authzen_no_button_text">No</string>
    <string name="auth_authzen_notify_google_default_text">Google will be notified that someone attempted to access your account.</string>
    <string name="auth_authzen_notify_google_recovery_workflow_text">Google received a request to change your password. Since the request wasn’t from you, it’s been canceled. No changes have been made to your account.</string>
    <string name="auth_authzen_ok_button_text">OK</string>
    <string name="auth_authzen_pin_validation_default_desc_text">Touch the number shown on the other screen. This will sign you in on your computer.</string>
    <string name="auth_authzen_pin_validation_default_title_text">Allow sign-in</string>
    <string name="auth_authzen_profile_picture_label">Profile picture</string>
    <string name="auth_authzen_recovery_2f_challenge_desc_text">Did you just try to login to Google?</string>
    <string name="auth_authzen_recovery_approved_text">Password reset approved</string>
    <string name="auth_authzen_recovery_canceled_text">Password reset canceled</string>
    <string name="auth_authzen_recovery_double_confirm_desc_text">Allow the password reset from %s?</string>
    <string name="auth_authzen_recovery_double_confirm_title_text">We need your confirmation</string>
    <string name="auth_authzen_recovery_incorrect_pin_desc_text">Google stopped the password reset attempt.</string>
    <string name="auth_authzen_recovery_incorrect_pin_title_text">Incorrect number</string>
    <string name="auth_authzen_recovery_pin_confirm_desc_text">Touch the number shown on the other screen. This will reset your password.</string>
    <string name="auth_authzen_recovery_pin_confirm_title_text">Allow password reset</string>
    <string name="auth_authzen_recovery_reject_desc_text">Someone requested to reset your Google Account password. Google stopped the password reset attempt.</string>
    <string name="auth_authzen_recovery_reject_title_text">Password reset prevented</string>
    <string name="auth_authzen_recovery_verification_desc_text">Did you request to reset your password from %s?</string>
    <string name="auth_authzen_recovery_verification_title_text">Tried to reset your password?</string>
    <string name="auth_authzen_secure_account_button_text">Secure your account</string>
    <string name="auth_authzen_sending_reply_failed_text">Could not send reply to the server.</string>
    <string name="auth_authzen_sending_reply_text">Sending reply to the server</string>
    <string name="auth_authzen_time_display_text">less than %s minutes ago</string>
    <string name="auth_authzen_time_just_now_text">Just Now</string>
    <string name="auth_authzen_wait_text">Please wait…</string>
    <string name="auth_authzen_workflow_title">Google Authorization Prompt</string>
    <string name="auth_authzen_yes_button_text">Yes</string>
    <string name="auth_back_button_label">Back</string>
    <string name="auth_bad_name_title">Use this name?</string>
    <string name="auth_fitness_settings_title">Google Fit</string>
    <string name="auth_google_settings_header_title">Privacy</string>
    <string name="auth_location_settings_title">Location settings</string>
    <string name="auth_maps_settings_title">Maps &amp; Latitude</string>
    <string name="auth_next_button_label">Next</string>
    <string name="auth_nfc_caution">Protect this tag. An attacker may be able to copy it.</string>
    <string name="auth_otp_done_button">Done</string>
    <string name="auth_plus_settings_title">Google+</string>
    <string name="auth_search_settings_title">Search</string>
    <string name="auth_show_error_activity_title">"Couldn't sign in"</string>
    <string name="auth_skip_button_label">Skip</string>
    <string name="auth_submission_error_text">There was an error. Try again.</string>
    <string name="auth_trust_agent_add_nfc_title">Add NFC</string>
    <string name="auth_trust_agent_nfc_device_name_hint">Name</string>
    <string name="auth_trust_agent_nfc_found_prompt">"NFC found
Enter a name for it."</string>
    <string name="auth_trust_agent_pref_trusted_places_home_title">Home</string>
    <string name="auth_trust_agent_pref_trusted_places_home_work_default_summary">Unknown</string>
    <string name="auth_trust_agent_pref_trusted_places_title">Trusted places</string>
    <string name="auth_trust_agent_pref_trusted_places_work_title">Work</string>
    <string name="auth_trust_agent_trusted_devices_ok">OK</string>
    <string name="place_address_hint">Address</string>
    <string name="place_address_title">Address</string>
    <string name="place_address_update_hint">Update</string>
    <string name="place_category_title">Category</string>
    <string name="place_name_hint">Place name</string>
    <string name="place_name_title">Name</string>
    <string name="place_phone_hint">Primary phone number</string>
    <string name="place_phone_title">Phone</string>
    <string name="place_website_hint">Official website</string>
    <string name="place_website_title">Website</string>
    <string name="plus_first_name">First</string>
    <string name="plus_last_name">Last</string>
    <string name="plus_oob_first_name_content_description">First name</string>
    <string name="plus_oob_last_name_content_description">Last name</string>
</resources>