<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/title" android:text="@string/auth_authzen_default_confirmation_title" style="@style/AuthzenTitle" />
    <TextView android:id="@id/description" style="@style/AuthzenDescription" />
    <Button android:layout_gravity="center" android:id="@id/allow_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/auth_authzen_allow_reset_button_text" style="@style/AuthzenButton" />
    <Button android:layout_gravity="center" android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="16.0dip" android:text="@string/auth_authzen_confirmation_cancel_button_text" android:contentDescription="@string/auth_authzen_cancel_button_label" style="@style/AuthzenBorderlessButton" />
</LinearLayout>