<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/title" android:text="@string/auth_authzen_recovery_verification_title_text" style="@style/AuthzenTitle" />
    <TextView android:id="@id/description" style="@style/AuthzenDescription" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/no_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/auth_authzen_no_button_text" android:layout_weight="1.0" style="@style/AuthzenButton" />
        <Button android:id="@id/yes_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/auth_authzen_yes_button_text" android:layout_weight="1.0" style="@style/AuthzenButton" />
    </LinearLayout>
</LinearLayout>